[gd_scene load_steps=8 format=3 uid="uid://dol1nt87oc8tx"]

[ext_resource type="Texture2D" uid="uid://d0l5cc8wxa7di" path="res://Sprites/shop-removebg-preview.png" id="1_21r4x"]
[ext_resource type="Script" path="res://Scripts/shop.gd" id="1_qpbei"]
[ext_resource type="PackedScene" uid="uid://16fc3cmb7er4" path="res://CustomComponents/ShopPanel.tscn" id="2_ca4yk"]
[ext_resource type="Texture2D" uid="uid://v00lgsky5upv" path="res://Sprites/icon1.png" id="3_lsgm1"]
[ext_resource type="Texture2D" uid="uid://d03shh8y6gjmb" path="res://Sprites/icon11.png" id="4_h8ckq"]
[ext_resource type="Texture2D" uid="uid://dcyxnrcs8xumg" path="res://Sprites/icon12.png" id="5_dfp2c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dvpcu"]
size = Vector2(38, 38)

[node name="Shop" type="RigidBody2D"]
texture_filter = 1
position = Vector2(50, 50)
gravity_scale = 0.0
freeze = true
script = ExtResource("1_qpbei")
shopSlot = ExtResource("2_ca4yk")
icons = Array[CompressedTexture2D]([ExtResource("3_lsgm1"), ExtResource("4_h8ckq"), ExtResource("5_dfp2c")])
description = Array[String](["+ MaxHp Adds 2 MaxHp 15G", "Heals 25% of MaxHp 5G", "Adds 3% permanent speed boost 3G"])

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.17, 0.17)
texture = ExtResource("1_21r4x")

[node name="ShopDisplay" type="HBoxContainer" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(100, 40)
layout_direction = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_dvpcu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_dvpcu")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
